# pbrt-v2

./: CMakeLists.txt
cmake/: OpenEXR.cmake
scenes/microscopy/: bunny.ipynb  simple.pbrt
src/: Makefile  SConscript
src/cameras/: telecentric.cpp  telecentric.h
src/core/: api.cpp  api.h  bitarray.cpp  bitarray.h  fileutil.cpp  fileutil.h  geometry.h  integrator.h  light.cpp  light.h  montecarlo.cpp  paramset.cpp  paramset.h  pbrt.h  pbrtlex.cpp  pbrtlex.ll  pbrtparse.cpp  pbrtparse.hh  pbrtparse.yy  scene.cpp  scene.h  sensor.cpp  sensor.h  shape.h  spectrum.cpp  spectrum.h  transform.cpp  transform.h  volume.cpp  volume.h  volumeutil.cpp  volumeutil.h
src/film/: image.cpp  image.h
src/integrators/: fluorescencesingle.cpp  fluorescencesingle.h  fluorescencesinglerwl.cpp  fluorescencesinglerwl.h  fvpl.cpp  fvpl.h  igi.h  path.cpp  sensor.cpp  sensor.h  single.cpp  volbdpt.cpp  volbdpt.h  volpath.cpp  volpath.h  vpl.cpp  vpl.h  vsd.cpp  vsd.h  vsdbdg.cpp  vsdbdg.h  vsdblg.cpp  vsdblg.h  vsdbsg.cpp  vsdbsg.h  vsdfds.cpp  vsdfds.h  vsdfls.cpp  vsdfls.h  vsdfss.cpp  vsdfss.h  vsdlinear.cpp  vsdlinear.h  vsdlinearsprite.cpp  vsdlinearsprite.h  vsdscattering.cpp  vsdscattering.h
src/lights/: collimated.cpp  collimated.h  diffuse.cpp  diffuse.h
src/main/: pbrt.cpp
src/materials/: mirror.cpp
src/renderers/: samplerrenderer.cpp
src/shapes/: cone.h  cylinder.h  disk.cpp  disk.h  heightfield.h  hyperboloid.h  loopsubdiv.h  nurbs.h  paraboloid.h  rectangle.cpp  rectangle.h  sphere.h  trianglemesh.h
src/tools/: objx.cpp  pbrt2raw.cpp  spritebounds.cpp  volumizesprite.cpp
src/volumes/: absorbing.cpp  absorbing.h  annotatedgrid.cpp  annotatedgrid.h  binarygrid.cpp  binarygrid.h  exponential.cpp  exponential.h  fluorescent.cpp  fluorescent.h  fluorescentannotatedgrid.cpp  fluorescentannotatedgrid.h  fluorescentbinarygrid.cpp  fluorescentbinarygrid.h  fluorescentgrid.cpp  fluorescentgrid.h  fluorescentscattering.cpp  fluorescentscattering.h  fluorescentscatteringgrid.cpp  fluorescentscatteringgrid.h  grid.cpp  grid.h  heterogeneous.cpp  heterogeneous.h  homogeneous.cpp  homogeneous.h  vsdgrid.cpp  vsdgrid.h
src/vsd/: vsdevent.h  vsdgrid.cpp  vsdgrid.h  vsdsprite.cpp  vsdsprite.h
vsd/: README  config.config  run_vsd_simulation.sh  sample.config  validation.config
vsd/analysis/: displayVSDImage.m  sample.m  sampleVSDImage.vsd
vsd/configurations/: camera.input  sensor_sprite.input  sensor_volume.input
vsd/sample-data/data/: sprite.exr  sprite.pbrt  sprite1.psh  sprite2.psh
vsd/scripts/cluster/: slurm.py  slurm_configuration.py
vsd/scripts/execution/: arguments.py  run_in_silico_vsdi.py
vsd/scripts/geometry/: bounding_box.py  geometric_utilities.py  mosaic_data.py  sensor_data.py  spatial_setup.py
vsd/scripts/pbrt/: pbrt_configuration.py
vsd/scripts/sprite/: numpy_to_sprite.py  sprite_bounds.py  sprite_generation.py  sprite_reader.py  sprite_writer.py
vsd/scripts/tests/: convert_sprite_to_volume.py  create_sprite.py  create_volume_from_sprite.py  nh-random.psh  nh-random.psi  volume.hdr  volume.raw
vsd/scripts/tests/converter/: converter.py
vsd/scripts/utilities/: color_map.py  file_handling.py
vsd/scripts/volume/: volume_generation.py  volume_utilities.py
vsd/utilities/: CMakeLists.txt  Common.h  Sprite.cpp  Sprite.h  SpriteConverter.cpp
